forward submodule and fix build error

--- a/backend/project/custom-test/custom-test-mq/custom-test-mq-sender/src/main/resources/application.yml
+++ b/backend/project/custom-test/custom-test-mq/custom-test-mq-sender/src/main/resources/application.yml
@@ -1,6 +1,12 @@
 server:
   port: 9007
+
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ANT_PATH_MATCHER
+  config:
+    use-legacy-processing: true
   profiles:
     active: dev
   application:
