--- a/backend/project/project-test/src/main/resources/application.yml
+++ b/backend/project/project-test/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
   port: 8081
 
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ANT_PATH_MATCHER
   profiles:
     # this sequence is master
     include: dev
