--- a/backend/project/custom-test/custom-oss/src/main/resources/application.yml
+++ b/backend/project/custom-test/custom-oss/src/main/resources/application.yml
@@ -2,7 +2,12 @@ server:
   port: 9001
 
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ANT_PATH_MATCHER
+  config:
+    use-legacy-processing: true
   profiles:
     active: dev
   application:
-    name: custom-test-uid
+    name: custom-oss
