--- a/backend/project/custom-test/custom-test-redis/src/main/resources/application.yml
+++ b/backend/project/custom-test/custom-test-redis/src/main/resources/application.yml
@@ -2,6 +2,11 @@ server:
   port: 9006
 
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ANT_PATH_MATCHER
+  config:
+    use-legacy-processing: true
   profiles:
     active: dev
   application:
