--- a/backend/project/pom.xml
+++ b/backend/project/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.alice52</groupId>
@@ -15,7 +16,6 @@
     </modules>
 
     <properties>
-
 
 
         <!--  #region  ====================== common version =====================    -->
@@ -50,12 +50,13 @@
         <kaptcha.version>0.0.9</kaptcha.version>
 
         <!-- spring -->
-        <spring.boot.version>2.2.2.RELEASE</spring.boot.version>
+        <spring.boot.version>2.7.5</spring.boot.version>
         <actuator.admin.version>2.7.6</actuator.admin.version>
         <spring.cloud.version>2021.0.4</spring.cloud.version>
         <cloud.alibaba.version>2021.1</cloud.alibaba.version>
         <security.oauth.version>2.5.2.RELEASE</security.oauth.version>
         <feign.core.version>11.9.1</feign.core.version>
+        <spring.boot.maven.version>2.2.2.RELEASE</spring.boot.maven.version>
 
         <!-- jackson -->
         <jackson.modules>2.13.4</jackson.modules>
@@ -64,7 +65,6 @@
         <mysql.version>5.1.49</mysql.version>
         <druid.version>1.2.14</druid.version>
         <mybatis.plus.version>3.5.2</mybatis.plus.version>
-        <mybatis.plus.extension>3.3.1</mybatis.plus.extension>
         <mybatis.spring.boot.version>2.2.2</mybatis.spring.boot.version>
         <elasticsearch.version>7.17.5</elasticsearch.version>
         <redisson.version>3.17.6</redisson.version>
@@ -83,7 +83,7 @@
 
     <dependencyManagement>
         <dependencies>
-            <!-- colud -->
+            <!-- cloud -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
@@ -183,9 +183,9 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.springframework.security.oauth</groupId>
-                <artifactId>spring-security-oauth2</artifactId>
-                <version>${security.oauth.version}</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-validation</artifactId>
+                <version>${spring.boot.version}</version>
             </dependency>
             <dependency>
                 <groupId>de.codecentric</groupId>
@@ -232,13 +232,15 @@
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-extension</artifactId>
-                <version>${mybatis.plus.extension}</version>
+                <version>${mybatis.plus.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-annotation</artifactId>
                 <version>${mybatis.plus.version}</version>
             </dependency>
+
+            <!-- es -->
             <dependency>
                 <groupId>org.elasticsearch.client</groupId>
                 <artifactId>elasticsearch-rest-high-level-client</artifactId>
@@ -327,7 +329,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring.boot.version}</version>
+                <version>${spring.boot.maven.version}</version>
                 <executions>
                     <execution>
                         <goals>
@@ -349,14 +351,14 @@
                     </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
-                            <groupId>org.mapstruct</groupId>
-                            <artifactId>mapstruct-processor</artifactId>
-                            <version>${mapstruct.version}</version>
-                        </path>
-                        <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                             <version>${lombok.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${mapstruct.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
