--- a/backend/project/pom.xml
+++ b/backend/project/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.alice52</groupId>
@@ -16,6 +15,7 @@
     </modules>
 
     <properties>
+
 
 
         <!--  #region  ====================== common version =====================    -->
@@ -35,7 +35,7 @@
         <swagger-bootstrap-ui.version>1.9.3</swagger-bootstrap-ui.version>
         <swagger2.knife4j>3.0.3</swagger2.knife4j>
         <swagger.starter>3.0.0</swagger.starter>
-        <slf4j.api.version>1.7.36</slf4j.api.version>
+        <slf4j.api.version>2.0.3</slf4j.api.version>
         <logback.core.version>1.2.9</logback.core.version>
         <logback.classic.version>1.2.3</logback.classic.version>
 
@@ -44,18 +44,18 @@
         <lombok.version>1.18.24</lombok.version>
         <hutool.all.version>5.8.9</hutool.all.version>
         <jasypt.encrtpy.version>3.0.4</jasypt.encrtpy.version>
-        <mapstruct.version>1.5.2.Final</mapstruct.version>
+        <mapstruct.version>1.5.3.Final</mapstruct.version>
         <guava.version>31.1-jre</guava.version>
         <validation.api.version>2.0.1.Final</validation.api.version>
         <kaptcha.version>0.0.9</kaptcha.version>
 
         <!-- spring -->
         <spring.boot.version>2.7.5</spring.boot.version>
-        <actuator.admin.version>2.7.6</actuator.admin.version>
+        <actuator.admin.version>2.7.7</actuator.admin.version>
         <spring.cloud.version>2021.0.4</spring.cloud.version>
         <cloud.alibaba.version>2021.1</cloud.alibaba.version>
         <security.oauth.version>2.5.2.RELEASE</security.oauth.version>
-        <feign.core.version>11.9.1</feign.core.version>
+        <feign.core.version>11.10</feign.core.version>
         <spring.boot.maven.version>2.2.2.RELEASE</spring.boot.maven.version>
 
         <!-- jackson -->
@@ -66,8 +66,8 @@
         <druid.version>1.2.14</druid.version>
         <mybatis.plus.version>3.5.2</mybatis.plus.version>
         <mybatis.spring.boot.version>2.2.2</mybatis.spring.boot.version>
-        <elasticsearch.version>7.17.5</elasticsearch.version>
-        <redisson.version>3.17.6</redisson.version>
+        <elasticsearch.version>7.17.7</elasticsearch.version>
+        <redisson.version>3.17.7</redisson.version>
 
         <!-- mq -->
         <rabbitmq.client.version>5.16.0</rabbitmq.client.version>
@@ -77,7 +77,8 @@
         <jquery.version>3.3.1</jquery.version>
         <justauth.starter>1.4.0</justauth.starter>
         <grpc_version>1.50.2</grpc_version>
-        <curator.zk.version>5.3.0</curator.zk.version>
+        <curator.zk.version>5.4.0</curator.zk.version>
+        <qcloud.version>5.6.109</qcloud.version>
         <!--  #region  ====================== common version =====================    -->
     </properties>
 
@@ -320,6 +321,12 @@
                 <groupId>com.rabbitmq</groupId>
                 <artifactId>amqp-client</artifactId>
                 <version>${rabbitmq.client.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.qcloud</groupId>
+                <artifactId>cos_api</artifactId>
+                <version>${qcloud.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
