--- a/.github/workflows/docker-project-test.yml
+++ b/.github/workflows/docker-project-test.yml
@@ -1,22 +1,26 @@
-name: Build Image Project-Custom-Cloud
+name: Build Image Project-Test
 
 on:
   push:
     branches:
       - master
-      - seed
     paths:
-      - 'backend/graphql/**'
-      - '.github/workflows/docker-project-cloud-backend.yml'
+      - '**/project-test/**'
+      - '.github/workflows/docker-project-test.yml'
   pull_request:
 
 jobs:
-  push-image:
-    runs-on: ubuntu-latest
+  main:
+    runs-on: ubuntu-20.04
     if: "contains(github.event.head_commit.message, '[image]')"
+    strategy:
+      matrix:
+        MODULE_NAME: ["Project Test"]
     env: # define constant
-      PROJECT_PREFIX: backend/graphql
-      IMAGE_PREFIX: graphql
+      PROJECT_PREFIX: backend
+      PROJECT_NAME: project
+      IMAGE_PREFIX: project
+      MODULE_NAME: project-test
 
     steps:
       - name: Checkout Code
@@ -32,6 +36,7 @@ jobs:
           # architecture: x64
 
       - name: Export Global Var
+        # define global var, then put to GITHUB_ENV
         run: |
           echo "ALI_DOCKER_REGISTRY=${{ secrets.ALI_DOCKER_HUB_REGISTRY }}" >> $GITHUB_ENV
           echo "ALI_DOCKER_USERNAME=${{ secrets.ALI_DOCKER_REGISTRY_USERNAME }}" >> $GITHUB_ENV
@@ -49,18 +54,22 @@ jobs:
 
       - name: Build Project
         run: |
-          PROJECT_NAME=project
           cd $PROJECT_HOME/$PROJECT_PREFIX/$PROJECT_NAME
           cd common-api/ && ./reparent.sh && cd ../
           mvn clean package -DskipTests=true
 
-      - name: Push Graphql Image
+      - name: Upload ${{ matrix.MODULE_NAME }} Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${MODULE_NAME}-1.0-SNAPSHOT.jar
+          path: ${{ github.workspace }}/**/${MODULE_NAME}*.jar
+          retention-days: 7
+
+      - name: Push ${{ matrix.MODULE_NAME }} Image
         run: |
-          PROJECT_NAME=graphql
-          MODULE_NAME=graphql-test
-          cd $PROJECT_HOME/$PROJECT_PREFIX/$PROJECT_NAME/$MODULE_NAME/
+          cd $PROJECT_HOME/$PROJECT_PREFIX/$PROJECT_NAME/$MODULE_NAME
           image=$IMAGE_PREFIX-$MODULE_NAME:${TAG}
-          docker build -f Dockerfile --build-arg MODULE_NAME=$MODULE_NAME --build-arg JASYPT_ENCRYPTOR_PASSWORD=$JASYPT_ENCRYPTOR_PASSWORD -t ${image} .
+          docker build -f Dockerfile --build-arg MODULE_NAME=$MODULE_NAME --build-arg COMMON_SERVICE_IP=$COMMON_SERVICE_IP --build-arg JASYPT_ENCRYPTOR_PASSWORD=$JASYPT_ENCRYPTOR_PASSWORD -t ${image} .
           docker login --username=$ALI_DOCKER_USERNAME --password=$ALI_DOCKER_PASSWORD $ALI_DOCKER_REGISTRY
           docker tag $image $ALI_DOCKER_REGISTRY/alice52/$image
           docker push $ALI_DOCKER_REGISTRY/alice52/$image
