--- a/.github/workflows/project-backend.yml
+++ b/.github/workflows/project-backend.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - master
-      - seed
     paths:
       - 'backend/**'
       - '.github/workflows/project-backend.yml'
@@ -13,10 +12,11 @@ on:
 
 jobs:
   reusable_build_job:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     if: "!contains(github.event.head_commit.message, 'ci skip') && !contains(github.event.head_commit.message, '[image]')"
     env: # define constant
       PROJECT_PREFIX: backend
+      PROJECT_NAME: project
 
     steps:
       - name: Checkout Code
@@ -32,11 +32,13 @@ jobs:
           # architecture: x64
 
       - name: Export Global Var
+        # define global var, then put to GITHUB_ENV
         run: |
           echo "ALI_DOCKER_REGISTRY=${{ secrets.ALI_DOCKER_HUB_REGISTRY }}" >> $GITHUB_ENV
           echo "ALI_DOCKER_USERNAME=${{ secrets.ALI_DOCKER_REGISTRY_USERNAME }}" >> $GITHUB_ENV
           echo "ALI_DOCKER_PASSWORD=${{ secrets.ALI_DOCKER_REGISTRY_PASSWORD }}" >> $GITHUB_ENV
           echo "JASYPT_ENCRYPTOR_PASSWORD=${{ secrets.JASYPT_ENCRYPTOR_PASSWORD }}" >> $GITHUB_ENV
+          echo "COMMON_SERVICE_IP=${{ secrets.COMMON_SERVICE_IP }}"
           echo "PROJECT_HOME=$PWD" >> $GITHUB_ENV
           echo "TAG=`echo \`date +%Y%m%d\`.${GITHUB_SHA} | cut -c1-16`" >> $GITHUB_ENV
 
@@ -49,7 +51,6 @@ jobs:
 
       - name: Build Project
         run: |
-          PROJECT_NAME=project
           cd $PROJECT_HOME/$PROJECT_PREFIX/$PROJECT_NAME
           cd common-api/ && ./reparent.sh && cd ../
           mvn clean package -DskipTests=true
