--- a/backend/project/project-test/src/main/resources/application.yml
+++ b/backend/project/project-test/src/main/resources/application.yml
@@ -1,10 +1,22 @@
 server:
-  port: 8081
+  port: 8080
 
 spring:
+  profiles:
+    active: dev
+  application:
+    name: PROJECT-TEST
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
-  profiles:
-    # this sequence is master
-    include: dev
+    async:
+      request-timeout: 20
+    throw-exception-if-no-handler-found: true
+  config:
+    use-legacy-processing: true
+  resources:
+    add-mappings: false
+  main:
+    allow-bean-definition-overriding: true
+  jackson:
+    default-property-inclusion: non_null
