--- a/environment/deploy/docker-compose.yml
+++ b/environment/deploy/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     restart: 'on-failure:3'
     container_name: dev-project-worklow
     volumes:
-      - /root/project-name/logs:/log
+      - /root/dev-project-worklow/logs:/logs
     ports:
       - 8010:8080
     environment:
