--- a/environment/deploy/docker-compose.yml
+++ b/environment/deploy/docker-compose.yml
@@ -1,13 +1,12 @@
 version: '3.0'
 services:
-  project-worklow:
-    image: registry.cn-shanghai.aliyuncs.com/alice52/practice-custom-test:20210608.09ec081
+  dev-project-test:
+    image: registry.cn-shanghai.aliyuncs.com/alice52/project-project-test:20221031.7e3eeae
     restart: 'on-failure:3'
-    container_name: dev-project-worklow
+    container_name: dev-project-test
     volumes:
-      - /root/dev-project-worklow/logs:/logs
+      - /root/dev-project-test/logs:/logs
     ports:
-      - 8010:8080
+      - 8083:8080
     environment:
       - TZ=Asia/Shanghai
-      - spring.profiles.active=cloud
