split custom-test to common-api

--- a/backend/project/project-test/pom.xml
+++ b/backend/project/project-test/pom.xml
@@ -12,10 +12,9 @@
     <artifactId>project-test</artifactId>
 
     <dependencies>
-
         <dependency>
             <groupId>io.github.alice52</groupId>
-            <artifactId>project-common-api</artifactId>
+            <artifactId>common-api-inject</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
