--- a/backend/project/pom.xml
+++ b/backend/project/pom.xml
@@ -11,12 +11,9 @@
     <modules>
         <module>common-api</module>
         <module>project-test</module>
-        <module>custom-test</module>
-        <module>project-common-api</module>
     </modules>
 
     <properties>
-
 
 
         <!--  #region  ====================== common version =====================    -->
@@ -39,6 +36,8 @@
         <slf4j.api.version>1.7.36</slf4j.api.version>
         <logback.core.version>1.2.9</logback.core.version>
         <logback.classic.version>1.2.3</logback.classic.version>
+        <aliyun.logback.version>0.1.18</aliyun.logback.version>
+        <janino.version>3.1.9</janino.version>
 
         <!-- tool -->
         <jodah.expiringmap.version>0.5.10</jodah.expiringmap.version>
@@ -79,7 +78,7 @@
         <justauth.starter>1.4.0</justauth.starter>
         <grpc_version>1.50.2</grpc_version>
         <curator.zk.version>5.4.0</curator.zk.version>
-        <qcloud.version>5.6.108</qcloud.version>
+        <qcloud.version>5.6.109</qcloud.version>
         <!--  #region  ====================== common version =====================    -->
     </properties>
 
@@ -107,7 +106,6 @@
                 <groupId>org.slf4j</groupId>
                 <version>${slf4j.api.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-core</artifactId>
@@ -117,6 +115,16 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>${logback.classic.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.codehaus.janino</groupId>
+                <artifactId>janino</artifactId>
+                <version>${janino.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aliyun.openservices</groupId>
+                <artifactId>aliyun-log-logback-appender</artifactId>
+                <version>${aliyun.logback.version}</version>
             </dependency>
 
             <!-- tool -->
