--- a/backend/project/project-test/src/main/resources/application.yml
+++ b/backend/project/project-test/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   profiles:
     active: dev
   application:
-    name: PROJECT-TEST
+    name: project-test
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
@@ -14,9 +14,10 @@ spring:
     throw-exception-if-no-handler-found: true
   config:
     use-legacy-processing: true
-  resources:
-    add-mappings: false
   main:
     allow-bean-definition-overriding: true
   jackson:
     default-property-inclusion: non_null
+  web:
+    resources:
+      add-mappings: false
